# LOP-CodeInGame

./: .gitignore
.github/workflows/: deployment.yml  fastapi-deployment.yml  react-deployment.yml
api/: .gitignore  Dockerfile  __init__.py  app.py  credentials.json  globals.py  pyproject.toml  requirements.txt
api/config/: routes.py  settings.py  views.py
api/dependencies/: db.py  user.py
api/logger/: MongoHandler.py  MongoLogger.py
api/routes/: route_cli.py  route_exos.py  route_login.py  route_users.py
api/src/authentication/: authentication.py  jwt_encode.py
api/src/dependencies/: auth.py  utilities.py
api/src/enum/: enums.py
api/src/gcloud/: gcloud.py
api/src/logger/: MongoLogger.py
api/src/models/: BlackList.py  BlackListToken.py  DTO.py  Exercise.py  FormModel.py  Model.py  Student.py  Teacher.py  User.py  objectid.py
api/src/routes/: route_auth.py  route_cli.py  route_exos.py  route_login.py  route_users.py
api/src/utilities/: pipelines.py  utility_function.py
api/src/views/: UserView.py
api/test/utilities/: create.py
api/test/utilities/generator/: UserGenerator.py
api/test/views/: baseTest.py  test_user_view.py
api/utilities/: utilities_func.py
cli/: lopauth.py  lopdownload.py  lopsubmit.py  pyproject.toml  utilities.py
commandes/: lopauth.py  lopsubmit.py
ui/: .gitignore  config.ts  package.json
ui/public/: index.html
ui/src/: config.ts  index.tsx  routes.tsx
ui/src/hooks/: useColorIcon.ts  useGetUserDetailsQuery.ts
ui/src/mocks/: Competition.ts
ui/src/services/: authService.ts  competitionService.ts
ui/src/slices/: auth.ts  index.ts  navigation.ts  registration.ts  selector.ts
ui/src/theme/: markdown-config.tsx  markdown.module.scss  styles.ts
ui/src/thunks/: login.ts  logout.ts  register.ts
ui/src/types/: dto.d.ts  enum.d.ts  enum.ts  hui-types.d.ts  images.d.ts  models.d.ts
(+61 files in other folders)
