[tool.poetry]
name = "lop-codeingame"
version = "0.1.0"
description = ""
authors = ["machkouroke <machkour20.mo1@gmail.com>"]
readme = "README.md"
packages = [{include = "lop_codeingame"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
flask = "^2.3.2"
flask-pymongo = "^2.3.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
flask-bcrypt = "^1.0.1"
passlib = "^1.7.4"
jwt = "^1.3.1"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
