[tool.poetry]
name = "lop-codeingame"
version = "0.1.0"
description = ""
authors = ["machkouroke <machkour20.mo1@gmail.com>"]
readme = "README.md"
packages = [{include = "lop_codeingame"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
flask = "^2.3.2"
flask-pymongo = "^2.3.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-dotenv = "^1.0.0"
flask-bcrypt = "^1.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.15"
pyjwt = "^2.7.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
firebase-admin = "6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
