[tool.poetry]
name = "lop-codeingame"
version = "0.1.0"
description = ""
authors = ["machkouroke <machkour20.mo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pyjwt = "^2.7.0"
requests = "^2.31.0"
firebase-admin = "6.0.1"
pymongo = "^4.3.3"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
